# gbm-challenge

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/api_V1/: api.py
app/api/api_V1/endpoints/: accounts.py  orders.py
app/business_logic/: base_manager.py  constans.py  orders.py
app/config/: auth.py  logger.py
app/crud/: __init__.py  base.py  crud_accounts.py  crud_issuers.py  crud_orders.py
app/db/: base_class.py  in_memory.py  session.py
app/helpers/: db.py
app/models/: accounts.py  issuers.py  orders.py
app/schemas/: __init__.py  accounts.py  issuers.py  orders.py
app/utils/: auth.py  exceptions.py  serializers.py
db/: schema.sql
db/migrations/: 20230324164827_accounts.sql  20230325000746_orders.sql  20230326172829_issuers.sql
tests/: conftest.py
tests/api_v1/: test_accounts.py  test_orders.py
tests/business_logic/: test_base_manager.py  test_operations_manager.py
tests/crud/: test_crud_account.py  test_crud_issuers.py  test_crud_order.py
tests/db/: test_in_memory_manager.py
