[tool.poetry]
name = "gbm-challenge"
version = "0.1.0"
description = ""
authors = ["Roberto Garcia <robjesusggarcia@gmail.com>"]
readme = "README.md"
packages = [{include = "gbm_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
retrying = "^1.3.4"
secure = "^0.3.0"
sqlalchemy = "^2.0.7"
loguru = "^0.6.0"
pytest = "^7.2.2"
psycopg2-binary = "^2.9.5"
httpx = "^0.23.3"
pytz = "^2023.2"
freezegun = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
